examples/test/testpolicy19272.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19272
  namespace: namespace264
spec:
  podSelector:
    matchLabels:
      key27: value16
      key25: value40
      key16: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value44
          key0: value35
          key29: value43
      podSelector:
        matchLabels:
          key1: value41
          key24: value21
